# xlstool

./: .gitattributes  .gitignore  README.md  gen_all_windows.sh  gen_cpp_unix.sh  run.sh  xls_lists.txt
example/: Goods.xls
example/cpp-example/: CMakeLists.txt  build_win_x64_debug.sh
example/cpp-example/src/: ConfigData.cc  ConfigData.h  ConfigDataStorage.pb.cc  ConfigDataStorage.pb.h  DataBlocks.pb.cc  DataBlocks.pb.h  Goods.pb.cc  Goods.pb.h  Skill.pb.cc  Skill.pb.h  main.cc
example/unity-example/Assets/: demo.unity
example/unity-example/Assets/Resources/: ConfigData.bytes
example/unity-example/Assets/Scripts/: ProtoDemo.cs
example/unity-example/Assets/Scripts/Proto/: ConfigData.cs  ConfigDataStorage.cs  DataBlocks.cs  Goods.cs  Skill.cs
example/unity-example/ProjectSettings/: ProjectSettings.asset
example/xls/: Goods.xls  Skill.xls
src/: xlstool.py
src/codegen/: __init__.py  cpp_codegen.py  cs_codegen.py  protobuf_net_codegen.py  unity_csharp_codegen.py
